Mass fix for equipment locations in aerospace and protomechs.
Fixed armor array size when saving blk file.